...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0rj-1q-7lf">
                                <rect key="frame" x="5" y="498" width="364" height="167"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="Gallery Mode Button"/>
                                <connections>
                                    <segue destination="i76-Ob-9tT" kind="show" id="RPt-Zn-0Cv"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DrR-No-AfC">
                                <rect key="frame" x="5" y="334" width="364" height="167"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="Editor Mode Button"/>
                                <connections>
                                    <segue destination="DBJ-DQ-5IJ" kind="show" id="xr6-yc-uaU"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0cM-FS-BrB">
                                <rect key="frame" x="5" y="186" width="364" height="147"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="Photo Mode Button"/>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="gVt-C6-gPd"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="csF-F8-kuQ">
                                <rect key="frame" x="59" y="44" width="256" height="134"/>
...
